Idex design changed

--- a/templates/index.html
+++ b/templates/index.html
@@ -179,7 +179,7 @@
             </div>
         </div>
     </section>
-    <section class="cards-section">
+    <!-- <section class="cards-section">
         <div class="container">
             <h2 class="section-title">Statistika (Heyvandarlıq)</h2>
             <div class="cards">
@@ -206,7 +206,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     
 
     <footer class="footer">
